@@ -9,6 +9,8 @@
 * Add - Add ability to test Stripe account keys' validity.
 * Fix - Fixed full bank statement field description.
 * Fix - Notification messages are placed on top of the account keys modal.
+* Fix - Express checkout with 3DS card on product page when new checkout experience is enabled.
+* Fix - Remove duplicate call to `payment_scripts`.
 
 = 6.0.0 - 2022-01-05 =
 * Fix - Fixed capitalization for payment method names: iDEAL, giropay, and Sofort.
